# achilles

./: .gitignore  Dockerfile  README.md  pyproject.toml
achilles/: __init__.py  auth.py  config.py  crypto.py  database.py  main.py  mcp_server.py  models.py
achilles/cli/: main.py
achilles/routers/: ai_router.py  audit_router.py  auth_router.py  projects_router.py  secrets_router.py  trash_router.py
chrome-extension/: manifest.json
chrome-extension/background/: service-worker.js
chrome-extension/content/: detector.css  detector.js
chrome-extension/popup/: popup.css  popup.html  popup.js
chrome-extension/rules/: loader.js  rules.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: generate_icns_from_svg.py  generate_pngs.py
frontend/src-tauri/src/: lib.rs  main.rs  server.rs
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Toast.tsx  VaultPage.tsx
frontend/src/components/ui/: sidebar.tsx  sonner.tsx
frontend/src/hooks/: useTauri.ts
frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx  EnvVars.tsx  Login.tsx  Projects.tsx  Secrets.tsx  Settings.tsx  Tokens.tsx  Trash.tsx  Vault.tsx  VaultApiKeys.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
tests/: test_api.py  test_crypto.py
web/: index.html
